--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,11 @@ dependencies {
     compile 'org.hibernate:hibernate-core:5.1.0.Final'
     compile 'org.hibernate:hibernate-entitymanager:5.1.0.Final'
     compile 'org.hibernate:hibernate-annotations:3.5.6-Final'
-    compile 'org.hibernate.javax.persistence:hibernate-jpa-2.0-api:1.0.1.Final'
+    compile 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
     compile 'mysql:mysql-connector-java:5.1.38'
-    compile 'org.projectlombok:lombok:1.16.6'
+    compile 'org.projectlombok:lombok:1.16.8'
     compile 'ch.qos.logback:logback-classic:1.1.6'
     compile 'org.slf4j:slf4j-api:1.7.18'
+    compile 'org.hsqldb:hsqldb:2.3.3'
+    compile 'org.dbunit:dbunit:2.4.3'
 }
